CREDENZ-02-02-22-Alpha/sandbox/submissions/devesh/error.txt
  File "User_Data/devesh/codePy.py", line 40
    print('hello)
                ^
SyntaxError: EOL while scanning string literal
